--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,66 +1,72 @@
 trigger:
-- main
-
-pool:
-  name: Azure-UIP
-
+  - master
 variables:
-  group: UiPath
-  devOrchestrator: 'https://dev.uipath.com/'
-  tstOrchestrator: 'https://tst.uipath.com/'
-  prdOrchestrator: 'https://prd.uipath.com/'
+  - group: UiPath
 
 stages:
-- stage: Build
-  displayName: 'Create build artifact'
-  jobs:
-  - job: BuildArtifact
-    steps:
-    - task: UiPathPack@3
-      inputs:
-        versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-        outputType: 'Process'
-        orchestratorConnection: 'Azure-Uipath'
-        outputPath: '$(Build.ArtifactStagingDirectory)'
-    - task: PublishBuildArtifacts@1
-      inputs:
-       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-       ArtifactName: 'drop'
-       publishLocation: 'Container'
+  - stage: Build
+    displayName: Build Package
+    jobs:
+    - job: BuildPackage
+      pool: Azure-UIP
+      steps:
+      - task: UiPathPack@3
+        inputs:
+          versionType: 'AutoVersion'
+          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+          outputType: 'Process'
+          orchestratorConnection: 'Azure-Uipath'
+          outputPath: '$(Build.ArtifactStagingDirectory)'
+      - publish: $(Build.ArtifactStagingDirectory)
+        artifact: drop
 
-- stage: Asset
-  displayName: 'Create assets'
-  jobs:
-  - job: CreateAssets
-    steps:
-    - task: UiPathAssets@3
-      inputs:
-        orchestratorConnection: 'Azure-UIpath'
-        folderName: 'Shared'
-        assetActionType: 'Deploy'
-        csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
+  - stage: Assest
+    displayName: Create Assests
+    jobs:
+      - job: CreateAssests
+        pool: Azure-UIP
+        steps:
+        - task: UiPathAssets@3
+          inputs:
+            orchestratorConnection: 'Azure-Uipath'
+            folderName: 'Shared'
+            assetActionType: 'Deploy'
+            csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
 
-- stage: DeployDEV
-  displayName: Deploy build artifact to DEV
-  dependsOn: Build
-  condition: succeeded()
-  jobs:
-  - deployment: deployDEV
-    displayName: Deploy package to DEV Orchestrator
-    pool: Azure-UIP
-    environment: DEV
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - task: UiPathDeploy@3
+  - stage: DeployDEV
+    displayName: Deploy build artifact to DEV
+    dependsOn: Build
+    condition: succeeded()
+    jobs:
+      - deployment: deployDEV
+        displayName: Deploy package to DEV Orchestrator
+        pool: Azure-UIP
+        environment: DEV
+        strategy:
+         runOnce:
+          deploy:
+           steps:
+            - task: UiPathDeploy@3
+              inputs:
+                orchestratorConnection: 'Azure-Uipath'
+                packagesPath: '$(Pipeline.Workspace)\drop'
+                folderName: 'Shared'
+
+  
+
+
+  - stage: TestDEV
+    displayName:  Test After Publish
+    dependsOn: DeployDEV
+    condition: succeeded()
+    jobs:
+      - job: TestDEV
+        pool: Azure-UIP
+        steps:
+          - task: UiPathTest@3
             inputs:
-              orchestratorConnection: 'Azure-UIpath'
-              packagesPath: '$(Pipeline.Workspace)\drop'
+              testTarget: 'TestSet'
+              orchestratorConnection: 'Azure-Uipath'
+              testSet: 'UiPathAzureDevOps_Tests'
               folderName: 'Shared'
-    variables:
-            - name: packagePath
-              value: 'C:\Users\Devops\.nuget\packages'
-
-
+              testReportDestination: '$(Pipeline.Workspace)\drop'
