--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,72 +1,76 @@
 trigger:
-  - master
+- master
+
 variables:
-  - group: UiPath
+- group: UiPath
 
 stages:
-  - stage: Build
-    displayName: Build Package
-    jobs:
-    - job: BuildPackage
-      pool: Azure-UIP
-      steps:
-      - task: UiPathPack@3
-        inputs:
-          versionType: 'AutoVersion'
-          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
-          outputType: 'Process'
-          orchestratorConnection: 'Azure-Uipath'
-          outputPath: '$(Build.ArtifactStagingDirectory)'
-      - publish: $(Build.ArtifactStagingDirectory)
-        artifact: drop
+- stage: Build
+  displayName: Build Package
+  jobs:
+  - job: BuildPackage
+    pool: Azure-UIP
+    steps:
+    - task: UiPathPack@3
+      inputs:
+        versionType: 'AutoVersion'
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+        outputType: 'Process'
+        orchestratorConnection: 'Azure-Uipath'
+        outputPath: '$(Build.ArtifactStagingDirectory)'
+    - publish: $(Build.ArtifactStagingDirectory)
+      artifact: drop
 
-  - stage: Assest
-    displayName: Create Assests
-    jobs:
-      - job: CreateAssests
-        pool: Azure-UIP
-        steps:
-        - task: UiPathAssets@3
-          inputs:
-            orchestratorConnection: 'Azure-Uipath'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
+- stage: Assest
+  displayName: Create Assests
+  jobs:
+  - job: CreateAssests
+    pool: Azure-UIP
+    steps:
+    - task: UiPathAssets@3
+      inputs:
+        orchestratorConnection: 'Azure-Uipath'
+        folderName: 'Shared'
+        assetActionType: 'Deploy'
+        csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
 
-  - stage: DeployDEV
-    displayName: Deploy build artifact to DEV
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - deployment: deployDEV
-        displayName: Deploy package to DEV Orchestrator
-        pool: Azure-UIP
-        environment: DEV
-        strategy:
-         runOnce:
-          deploy:
-           steps:
-            - task: UiPathDeploy@3
-              inputs:
-                orchestratorConnection: 'Azure-Uipath'
-                packagesPath: '$(Pipeline.Workspace)\drop'
-                folderName: 'Shared'
-
-  
-
-
-  - stage: TestDEV
-    displayName:  Test After Publish
-    dependsOn: DeployDEV
-    condition: succeeded()
-    jobs:
-      - job: TestDEV
-        pool: Azure-UIP
-        steps:
-          - task: UiPathTest@3
+- stage: DeployDEV
+  displayName: Deploy build artifact to DEV
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: deployDEV
+    displayName: Deploy package to DEV Orchestrator
+    pool: Azure-UIP
+    environment: DEV
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: UiPathDeletePackage@1
             inputs:
-              testTarget: 'TestSet'
               orchestratorConnection: 'Azure-Uipath'
-              testSet: 'UiPathAzureDevOps_Tests'
+              packageName: 'your-package-name'
               folderName: 'Shared'
-              testReportDestination: '$(Pipeline.Workspace)\drop'
+              version: 'your-package-version'
+          - task: UiPathDeploy@3
+            inputs:
+              orchestratorConnection: 'Azure-Uipath'
+              packagesPath: '$(Pipeline.Workspace)\drop'
+              folderName: 'Shared'
+
+- stage: TestDEV
+  displayName: Test After Publish
+  dependsOn: DeployDEV
+  condition: succeeded()
+  jobs:
+  - job: TestDEV
+    pool: Azure-UIP
+    steps:
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestSet'
+        orchestratorConnection: 'Azure-Uipath'
+        testSet: 'UiPathAzureDevOps_Tests'
+        folderName: 'Shared'
+        testReportDestination: '$(Pipeline.Workspace)\drop'
