--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,7 +20,12 @@ stages:
         outputPath: '$(Build.ArtifactStagingDirectory)'
     - publish: $(Build.ArtifactStagingDirectory)
       artifact: drop
-
+    - task: UiPathDeploy@3
+      inputs:
+        orchestratorConnection: 'Azure-UIpath'
+        packagesPath: '$(Pipeline.Workspace)\drop'
+        folderName: 'Shared'
+        environments: 'DEV'
 - stage: Assest
   displayName: Create Assests
   jobs:
@@ -47,12 +52,7 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: UiPathDeletePackage@1
-            inputs:
-              orchestratorConnection: 'Azure-Uipath'
-              packageName: 'your-package-name'
-              folderName: 'Shared'
-              version: 'your-package-version'
+          
           - task: UiPathDeploy@3
             inputs:
               orchestratorConnection: 'Azure-Uipath'
