--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,25 +42,6 @@ stages:
         assetActionType: 'Deploy'
         csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
 
-- stage: DeployDEV
-  displayName: Deploy build artifact to DEV
-  dependsOn: Build
-  condition: succeeded()
-  jobs:
-  - deployment: deployDEV
-    displayName: Deploy package to DEV Orchestrator
-    pool: Azure-UIP
-    environment: DEV
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          
-          - task: UiPathDeploy@3
-            inputs:
-              orchestratorConnection: 'Azure-Uipath'
-              packagesPath: '$(Pipeline.Workspace)\drop'
-              folderName: 'Shared'
 
 - stage: TestDEV
   displayName: Test After Publish
@@ -72,8 +53,6 @@ stages:
     steps:
     - task: UiPathTest@3
       inputs:
-        testTarget: 'TestSet'
-        orchestratorConnection: 'Azure-Uipath'
-        testSet: 'UiPathAzureDevOps_Tests'
+        testTarget: 'TestProject'
+        orchestratorConnection: 'Azure-UIpath'
         folderName: 'Shared'
-        testReportDestination: '$(Pipeline.Workspace)\drop'
