--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
   jobs:
   - job: DevDeployJob
     pool:
-      name: UiPath
+      name: Azure-UIP
     steps:
     - task: UiPathDeploy@3
       inputs:
