--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,9 @@ stages:
     - task: UiPathPack@3
       inputs:
         versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
         orchestratorConnection: 'Azure-UIpath'
-        outputPath: '$(Build.ArtifactStagingDirectory)/drop/Output'
+        outputPath: '$(Build.ArtifactStagingDirectory)\Output'
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
@@ -23,7 +23,7 @@ stages:
     - task: UiPathDeploy@3
       inputs:
         orchestratorConnection: 'Azure-UIpath'
-        packagesPath: '$(Build.ArtifactStagingDirectory)/drop/Output'
+        packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
         folderName: 'Shared'
     - task: UiPathTest@3
       inputs:
@@ -41,5 +41,5 @@ stages:
     - task: UiPathDeploy@3
       inputs:
         orchestratorConnection: 'Azure-UIpath'
-        packagesPath: '$(Build.ArtifactStagingDirectory)/drop/Output'
+        packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
         folderName: 'Shared'
