--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ stages:
     - task: UiPathDeploy@3
       inputs:
         orchestratorConnection: 'Azure-UIpath'
-        packageAction: 'Replace'
+        packageAction: 'Update'
         packagesPath: 'C:\agent\_work\9\drop'
         folderName: 'Shared'
         #packageAction: 'Update'
