--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -56,3 +56,18 @@ stages:
         testTarget: 'TestProject'
         orchestratorConnection: 'Azure-UIpath'
         folderName: 'Shared'
+- stage: TestDEV
+  displayName:  Test After Publish
+  dependsOn: DeployDEV
+  condition: succeeded()
+  jobs:
+      - job: TestDEV
+        pool: UiPath
+        steps:
+          - task: UiPathTest@3
+            inputs:
+              testTarget: 'TestSet'
+              orchestratorConnection: 'Azure-Uipath'
+              testSet: 'UiPathAzureDevOps_Tests'
+              folderName: 'Shared'
+            
