--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -73,3 +73,20 @@ stages:
         npm install
         npm run test
       displayName: 'Run Unit Tests'
+  - job: RunTestPlan
+  displayName: 'Run Test Plan'
+  pool: Azure-UIP
+  dependsOn: BuildPackage
+  steps:
+  - task: DownloadBuildArtifacts@0
+    inputs:
+      buildType: 'current'
+      downloadType: 'single'
+      artifactName: 'drop'
+      downloadPath: '$(System.ArtifactsDirectory)/drop'
+  - task: UiPathTestPlan@3
+    inputs:
+      orchestratorConnection: 'Azure-Uipath'
+      folderName: 'Shared'
+      testPlanPath: '$(System.ArtifactsDirectory)/drop/MyTestPlan.json'
+      testEnvironment: 'DEV'
