Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -62,7 +62,7 @@ stages:
 
 - stage: RegressionTest
   displayName: Regression Tests
-  dependsOn: TestDEV
+  dependsOn: Build
   condition: succeeded()
   jobs:
   - job: RunRegressionTests
