--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -81,7 +81,7 @@ stages:
     displayName: 'Run Test Plan'
     pool:
       name: Azure-UIP
-    dependsOn: TestDEV
+    dependsOn: RegressionTest
     steps:
     - task: DownloadBuildArtifacts@0
       inputs:
