Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -72,4 +72,8 @@ stages:
       continueOnError: true
       
 
-      
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestProject'
+        orchestratorConnection: 'zohan-lab'
+        folderName: 'Shared'
