--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,18 +64,36 @@ stages:
                  environments: 'DEV'
 
 
-  - stage: TestDEV
-    displayName:  Test After Publish
-    dependsOn: DeployDEV
-    condition: succeeded()
-    jobs:
-      - job: TestDEV
-        pool: Azure-UIP
-        steps:
-          - task: UiPathTest@3
-            inputs:
-              testTarget: 'TestSet'
-              orchestratorConnection: 'zohan-lab'
-              testSet: 'UiPath'
-              folderName: 'Shared'
-              testReportDestination: '$(Pipeline.Workspace)\drop'
+ - stage: TestDEV
+  displayName: Test After Publish
+  dependsOn: DeployDEV
+  condition: succeeded()
+  jobs:
+    - job: TestDEV
+      pool: Azure-UIP
+      steps:
+        - task: UiPathTest@3
+          inputs:
+            testTarget: 'TestSet'
+            orchestratorConnection: 'zohan-lab'
+            testSet: 'UiPath'
+            folderName: 'Shared'
+            testReportDestination: '$(Pipeline.Workspace)\drop'
+        - task: DotNetCoreCLI@2
+          displayName: Unit Tests
+          inputs:
+            command: 'test'
+            projects: '**/*UnitTests.csproj'
+            arguments: '--configuration Release --logger trx --filter Category=Unit'
+            workingDirectory: '$(System.DefaultWorkingDirectory)'
+            publishTestResults: true
+            testResultsFiles: '**/*.trx'
+        - task: DotNetCoreCLI@2
+          displayName: Aggression Tests
+          inputs:
+            command: 'test'
+            projects: '**/*AggressionTests.csproj'
+            arguments: '--configuration Release --logger trx --filter Category=Aggression'
+            workingDirectory: '$(System.DefaultWorkingDirectory)'
+            publishTestResults: true
+            testResultsFiles: '**/*.trx'
