--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,90 +1,100 @@
 trigger:
-  - master
+- master
+
 variables:
-  - group: UiPath
+- group: UiPath
 
 stages:
-  - stage: Build
-    displayName: Build Package
-    jobs:
-    - job: BuildPackage
-      pool: Azure-UIP
-      steps:
-      - task: UiPathPack@3
-        inputs:
-          versionType: 'AutoVersion'
-          projectJsonPath: '''$(Build.SourcesDirectory)\project.json'
-          orchestratorConnection: 'zohan-lab'
-          outputPath: '$(Build.ArtifactStagingDirectory)\Output'
+- stage: Build
+  displayName: Build Package
+  jobs:
+  - job: BuildPackage
+    pool: Azure-UIP
+    steps:
+    - task: UiPathPack@3
+      inputs:
+        versionType: 'AutoVersion'
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+        orchestratorConnection: 'zohan-lab'
+        outputPath: '$(Build.ArtifactStagingDirectory)\Output'
 
-  - stage: Assest
-    displayName: Create Assests
-    jobs:
-      - job: CreateAssests
-        pool: Azure-UIP
-        steps:
-        - task: UiPathAssets@3
-          inputs:
-            orchestratorConnection: 'zohan-lab'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
+- stage: Assest
+  displayName: Create Assests
+  jobs:
+  - job: CreateAssests
+    pool: Azure-UIP
+    steps:
+    - task: UiPathAssets@3
+      inputs:
+        orchestratorConnection: 'zohan-lab'
+        folderName: 'Shared'
+        assetActionType: 'Deploy'
+        csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
 
-  - stage: DeployDEV
-    displayName: Deploy build artifact to DEV
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - deployment: deployDEV
-        displayName: Deploy package to DEV Orchestrator
-        pool: Azure-UIP
-        environment: DEV
-        strategy:
-         runOnce:
-          deploy:
-           steps:
-            - task: UiPathPack@3
-              inputs:
-                versionType: 'AutoVersion'
-                projectJsonPath: '$(Build.SourcesDirectory)\project.json'
-                outputPath: '$(Build.ArtifactStagingDirectory)\Output'
-            - task: PublishBuildArtifacts@1
-              inputs:
-                PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-                ArtifactName: 'drop'
-                publishLocation: 'Container'
-            
+- stage: DeployDEV
+  displayName: Deploy build artifact to DEV
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: deployDEV
+    displayName: Deploy package to DEV Orchestrator
+    pool: Azure-UIP
+    environment: DEV
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: UiPathPack@3
+            inputs:
+              versionType: 'AutoVersion'
+              projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+              outputPath: '$(Build.ArtifactStagingDirectory)\Output'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
 
-  - stage: TestDEV
-    displayName: Test After Publish
-    dependsOn: DeployDEV
-    condition: succeeded()
-    jobs:
-    - job: TestDEV
-      pool: Azure-UIP
-      steps:
-        - task: UiPathTest@3
-          inputs:
-            testTarget: 'TestSet'
-            orchestratorConnection: 'zohan-lab'
-            testSet: 'UiPath'
-            folderName: 'Shared'
-            testReportDestination: '$(Pipeline.Workspace)\drop'
-        - task: DotNetCoreCLI@2
-          displayName: Unit Tests
-          inputs:
-            command: 'test'
-            projects: '**/*UnitTests.csproj'
-            arguments: '--configuration Release --logger trx --filter Category=Unit'
-            workingDirectory: '$(System.DefaultWorkingDirectory)'
-            publishTestResults: true
-            testResultsFiles: '**/*.trx'
-        - task: DotNetCoreCLI@2
-          displayName: Aggression Tests
-          inputs:
-            command: 'test'
-            projects: '**/*AggressionTests.csproj'
-            arguments: '--configuration Release --logger trx --filter Category=Aggression'
-            workingDirectory: '$(System.DefaultWorkingDirectory)'
-            publishTestResults: true
-            testResultsFiles: '**/*.trx'
+- stage: TestDEV
+  displayName: Test After Publish
+  dependsOn: DeployDEV
+  condition: succeeded()
+  jobs:
+  - job: TestDEV
+    pool: Azure-UIP
+    steps:
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestSet'
+        orchestratorConnection: 'zohan-lab'
+        testSet: 'UiPath'
+        folderName: 'Shared'
+        testReportDestination: '$(Pipeline.Workspace)\drop'
+
+- stage: TestDEV
+  displayName: Test After Publish
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - job: TestDEV
+    pool:
+      name: Azure-UIP
+    steps:
+    - task: DotNetCoreCLI@2
+      displayName: Unit Tests
+      inputs:
+        command: 'test'
+        projects: '**/*UnitTests.csproj'
+        arguments: '--configuration Release --logger trx --filter Category=Unit'
+        workingDirectory: '$(System.DefaultWorkingDirectory)'
+        publishTestResults: true
+        testResultsFiles: '**/*.trx'
+    - task: DotNetCoreCLI@2
+      displayName: Aggression Tests
+      inputs:
+        command: 'test'
+        projects: '**/*AggressionTests.csproj'
+        arguments: '--configuration Release --logger trx --filter Category=Aggression'
+        workingDirectory: '$(System.DefaultWorkingDirectory)'
+        publishTestResults: true
+        testResultsFiles: '**/*.trx'
