--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,6 +66,11 @@ stages:
   pool:
     name: Azure-UIP
     steps:
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestProject'
+        orchestratorConnection: 'Azure-UIpath'
+        folderName: 'Shared'
     - task: ApacheJMeter@1
     displayName: 'Aggression Test'
     inputs:
@@ -73,4 +78,5 @@ stages:
       jmeterHome: '/path/to/jmeter'  # Set the path to your JMeter installation
       propertiesJtl: 'results.jtl'  # Save results to a file named 'results.jtl'
       propertiesOverride: '-Jusers=50 -Jrampup=10'  # Set parameters for the test
+    
 
