Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
     - task: UiPathTest@3
       inputs:
         testTarget: 'TestProject'
-        orchestratorConnection: 'Azure-UIpath'
+        orchestratorConnection: 'zohan-lab'
         folderName: 'Shared'
     - task: ApacheJMeter@1
     displayName: 'Aggression Test'
