--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,81 +1,72 @@
 trigger:
-- master
-
+  - master
 variables:
   - group: UiPath
 
 stages:
-- stage: Build
-  displayName: Build Package
-  jobs:
-  - job: BuildPackage
-    pool:
-      name: Azure-UIP
-    steps:
-    - task: UiPathPack@3
-      inputs:
-        versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-        outputType: 'Process'
-        orchestratorConnection: 'Azure-Uipath'
-        outputPath: '$(Build.ArtifactStagingDirectory)/Output'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
-    - task: UiPathDeploy@3
-      inputs:
-        orchestratorConnection: 'zohan-lab'
-        packagesPath: '$(Build.ArtifactStagingDirectory)/Output'
-        folderName: 'Shared'
-        environments: 'DEV'
-        
-- stage: Asset
-  displayName: Create Assets
-  jobs:
-  - job: CreateAssets
-    pool:
-      name: Azure-UIP
-    steps:
-    - task: UiPathAssets@3
-      inputs:
-        orchestratorConnection: 'zohan-lab'
-        folderName: 'Shared'
-        assetActionType: 'Deploy'
-        csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
+  - stage: Build
+    displayName: Build Package
+    jobs:
+    - job: BuildPackage
+      pool: Azure-UIP
+      steps:
+      - task: UiPathPack@3
+        inputs:
+          versionType: 'AutoVersion'
+          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+          outputType: 'Process'
+          orchestratorConnection: 'zohan-lab'
+          outputPath: '$(Build.ArtifactStagingDirectory)'
+      - publish: $(Build.ArtifactStagingDirectory)
+        artifact: drop
 
-- stage: TestDEV
-  displayName: Test After Publish
-  dependsOn: Build
-  condition: succeeded()
-  jobs:
-  - job: TestDEV
-    pool:
-      name: Azure-UIP
-    steps:
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'JUnit'
-        testResultsFiles: '**/TEST-*.xml'
-      displayName: 'Publish Test Results'
-      continueOnError: true
-    - task: VSTest@2
-      inputs:
-        testSelector: 'testAssemblies'
-        testAssemblyVer2: |
-          **\*test*.dll
-          !**\*TestAdapter.dll
-          !**\obj\**
-        searchFolder: '$(System.DefaultWorkingDirectory)'
-      displayName: 'Run Unit Tests'
-      continueOnError: true
-    - task: SonarCloudPublish@1
-      inputs:
-        pollingTimeoutSec: '300'
-    - task: TaurusRunner@0
-      inputs:
-        jmeterHome: '$(JMeterInstaller.JMeterHome)'
-        jmeterPath: '$(JMeterInstaller.JMeterPath)'
-        jmeterVersion: '$(JMeterInstaller.JMeterVersion)'
-        outputDir: 'taurus-output'
+  - stage: Assest
+    displayName: Create Assests
+    jobs:
+      - job: CreateAssests
+        pool: Azure-UIP
+        steps:
+        - task: UiPathAssets@3
+          inputs:
+            orchestratorConnection: 'zohan-lab'
+            folderName: 'Shared'
+            assetActionType: 'Deploy'
+            csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
+
+  - stage: DeployDEV
+    displayName: Deploy build artifact to DEV
+    dependsOn: Build
+    condition: succeeded()
+    jobs:
+      - deployment: deployDEV
+        displayName: Deploy package to DEV Orchestrator
+        pool: Azure-UIP
+        environment: DEV
+        strategy:
+         runOnce:
+          deploy:
+           steps:
+            - task: UiPathDeploy@3
+              inputs:
+                orchestratorConnection: 'zohan-lab'
+                packagesPath: '$(Pipeline.Workspace)\drop'
+                folderName: 'Shared'
+
+  
+          
+
+
+  - stage: TestDEV
+    displayName:  Test After Publish
+    dependsOn: DeployDEV
+    condition: succeeded()
+    jobs:
+      - job: TestDEV
+        pool: LAPTOP-Q338O4FK
+        steps:
+          - task: UiPathTest@3
+            inputs:
+              testTarget: 'TestSet'
+              orchestratorConnection: 'zohan-lab'
+              testSet: 'UiPathAzureDevOps_Tests'
+              folderName: 'Shared'
