Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -38,7 +38,7 @@ stages:
 
   - stage: TestDEV
     displayName:  Test After Publish
-    dependsOn: DeployDEV
+    dependsOn: Build
     condition: succeeded()
     jobs:
       - job: TestDEV
