--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,5 +1,6 @@
 trigger:
   - master
+
 variables:
   - group: UiPath
 
@@ -7,80 +8,65 @@ stages:
   - stage: Build
     displayName: Build Package
     jobs:
-    - job: BuildPackage
-      pool: Azure-UIP
-      steps:
-      - task: UiPathPack@3
-        inputs:
-          versionType: 'AutoVersion'
-          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
-          orchestratorConnection: 'zohan-lab'
-          outputPath: '$(Build.ArtifactStagingDirectory)\Output'
-      - task: PublishBuildArtifacts@1
-        inputs:
-          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-          ArtifactName: 'drop'
-          publishLocation: 'Container'
-      - task: UiPathDeploy@3
-        inputs:
-          orchestratorConnection: 'zohan-lab'
-          packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
-          folderName: 'Shared'
+      - job: BuildPackage
+        pool:
+          name: Azure-UIP
+        steps:
+          - task: UiPathPack@3
+            inputs:
+              versionType: 'AutoVersion'
+              projectJsonPath: '$(Build.SourcesDirectory)/project.json'
+              orchestratorConnection: 'zohan-lab'
+              outputPath: '$(Build.ArtifactStagingDirectory)/Output'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
+          - task: UiPathDeploy@3
+            inputs:
+              orchestratorConnection: 'zohan-lab'
+              packagesPath: '$(Build.ArtifactStagingDirectory)/Output'
+              folderName: 'Shared'
   - stage: TestDEV
-    displayName:  Test After Publish
+    displayName: Test After Publish
     dependsOn: Build
     condition: succeeded()
     jobs:
       - job: TestDEV
-        pool: Azure-UIP
-        steps:
-        # Define a test suite
-- suite: Addition Tests
-  # Define a test case
-  - test_case: Test addition of two numbers
-    # Define the inputs
-    inputs:
-      - x: 2
-      - y: 3
-    # Define the expected output
-    expected_output: 5
-    # Define the test steps
-    steps:
-      - add x and y
-      - verify the result is equal to the expected output
-
-  # Define another test case
-  - test_case: Test addition of negative numbers
-    inputs:
-      - x: -2
-      - y: -3
-    expected_output: -5
-    steps:
-      - add x and y
-      - verify the result is equal to the expected output
-      
-  # Define a regression test case
-  - test_case: Test addition with decimal numbers
-    inputs:
-      - x: 1.5
-      - y: 2.5
-    expected_output: 4
-    steps:
-      - add x and y
-      - verify the result is equal to the expected output
-
-  # Define another regression test case
-  - test_case: Test addition with large numbers
-    inputs:
-      - x: 1000000000000000000000000
-      - y: 2000000000000000000000000
-    expected_output: 3000000000000000000000000
-    steps:
-      - add x and y
-      - verify the result is equal to the expected output
-          
-  
-          
-
-
-  
+        pool:
+          name: Azure-UIP
+          steps:
+          - suite: Addition Tests
+          - test_case: Test addition of two numbers
+            inputs:
+              - x: 2
+              - y: 3
+            expected_output: 5
+            steps:
+              - add x and y
+              - verify the result is equal to the expected output
+          - test_case: Test addition of negative numbers
+            inputs:
+              - x: -2
+              - y: -3
+            expected_output: -5
+            steps:
+              - add x and y
+              - verify the result is equal to the expected output
+          - test_case: Test addition with decimal numbers
+            inputs:
+              - x: 1.5
+              - y: 2.5
+            expected_output: 4
+            steps:
+              - add x and y
+              - verify the result is equal to the expected output
+          - test_case: Test addition with large numbers
+            inputs:
+              - x: 1000000000000000000000000
+              - y: 2000000000000000000000000
+            expected_output: 3000000000000000000000000
+            steps:
+              - add x and y
+              - verify the result is equal to the expected output
