--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -17,7 +17,7 @@ stages:
     - task: UiPathPack@3
       inputs:
         versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/process/XXX-test-load/project.json'
+        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
         outputType: 'Process'
         orchestratorConnection: 'zohan-lab'
         outputPath: '$(Build.ArtifactStagingDirectory)Output'
@@ -51,7 +51,7 @@ stages:
             orchestratorConnection: 'zohan-lab'
             folderName: 'Shared'
             assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)/process/Assets/Assets.csv'
+            csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
 - stage: TstDeploy
   displayName: 'Deploy to TST Orchestrator'
